k8s/gce/istio/routing/0-app_initial_status.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-app
spec:
  hosts:
  - "app.burstserial.com"
  gateways:
  - myhero-gateway
  - mesh
  http:
  - route:
    - destination:
        host: myhero-app.myhero.svc.cluster.local
