k8s/gce/istio/routing/1-ui_all_to_v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-ui
spec:
  hosts:
  - "ui.burstserial.com"
  gateways:
  - myhero-gateway
  http:
  - route:
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myhero-ui-destinationrule
spec:
  host: myhero-ui.myhero.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
