k8s/gce/istio/routing/1-ui_destinationrule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: myhero-ui-destinationrule
spec:
  host: myhero-ui.myhero.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
