k8s/gce/istio/routing/2-ui_inject_delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-ui
spec:
  hosts:
  - "ui.burstserial.com"
  gateways:
  - myhero-gateway
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v1
