k8s/gce/istio/routing/3-app_HTTP_abort.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-app
spec:
  hosts:
  - "app.burstserial.com"
  gateways:
  - myhero-gateway
  - mesh
  http:
  - fault:
      abort:
        percent: 100
        httpStatus: 500
    route:
    - destination:
        host: myhero-app.myhero.svc.cluster.local
