k8s/gce/istio/routing/5-ui_all_to_v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-ui
spec:
  hosts:
  - "ui.burstserial.com"
  gateways:
  - myhero-gateway
  http:
  - route:
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v3
